demo/src/main/java/com/example/demo/principle/lsp/negative/SuperConsumer.java
package com.example.demo.principle.lsp.negative;

import lombok.Data;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 11:06:02
 * @Description
 */
@Data
public class SuperConsumer {
    private String name;
    private String email;
}
